--- a/lib/client/components/picker/picker.html
+++ b/lib/client/components/picker/picker.html
@@ -1,34 +1,53 @@
-<section class="clearfix row">
-    <div class="form-group">
-    <form name="flightForm" ng-submit="onSubmit(flightForm)" novalidate id="flightForm">
-        <div class="group">
-            <select ng-if="cities != null" id="city-depart" ng-model="info.cityDepart" class="form-control">
-                <option *ng-for="city in cities" value="{{ city.airportcode }}">{{ city.city }}</option>
-            </select>
-            <label for="city-depart">Departure</label>
-        </div>
+<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01', 'dateArrival': '2015-01-02'}]">Picker - router-link</a>
 
-        <div class="group">
-            <select ng-if="cities != null" id="city-arrival" ng-model="info.cityArrival" class="form-control">
-                <option *ng-for="#city in cities" value="{{ city.airportcode }}">{{ city.city }}</option>
-            </select>
-            <label for="city-arrival">Arrival</label>
-        </div>
+<form #aform="form" (submit)="onFind(aform.value)" novalidate onsubmit="return false;">
+  <div class="group">
+    <select id="city-depart" [(ng-model)]='info.cityDepart' class="form-control">
+      <option *ng-for="#vo of cities" [value]="vo.airportcode">{{ vo.city }}</option>
+    </select>
+    <label for="city-depart">Departure</label>
+  </div>
 
-        <div class="group">
-            <input type="date" name="date-depart" id="date-depart" ng-model="info.dateDepart" class="form-control">
-            <label for="date-depart">Depart Date</label>
-        </div>
+  <div class="group">
+    <select id="city-arrive" [(ng-model)]='info.cityArrival' class="form-control">
+      <option *ng-for="#vo of cities" [value]="vo.airportcode" selected="true">{{ vo.city }}</option>
+    </select>
+    <label for="city-depart">Arrival</label>
+  </div>
+
+  <div class="group">
+  <input type="date" name="date-depart" id="date-depart" [(ng-model)]="info.dateDepart" class="form-control">
+  <label for="date-depart">Depart Date</label>
+  </div>
+
+  <button type="submit">Submit</button>
+</form>
+<!--<section class="clearfix row">-->
+    <!--<div class="form-group">-->
+    <!--<form name="flightForm" ng-submit="onSubmit(flightForm)" novalidate id="flightForm">-->
 
 
-        <div class="group">
-            <input type="date" name="date-arrival" id="date-arrival" ng-model="info.dateArrival" class="form-control">
-            <label for="date-arrival">Arrival Date</label>
-        </div>
+        <!--<div class="group">-->
+            <!--<select ng-if="cities != null" id="city-arrival" ng-model="info.cityArrival" class="form-control">-->
+                <!--<option *ng-for="#vo of cities" value="#vo.airportcode">{{ vo.city }}</option>-->
+            <!--</select>-->
+            <!--<label for="city-arrival">Arrival</label>-->
+        <!--</div>-->
 
-        <div class="group">
-            <button class="btn btn-warning" type="submit">View Flights</button>
-        </div>
-    </form>
-    </div>
-</section>
+        <!--<div class="group">-->
+            <!--<input type="date" name="date-depart" id="date-depart" ng-model="info.dateDepart" class="form-control">-->
+            <!--<label for="date-depart">Depart Date</label>-->
+        <!--</div>-->
+
+
+        <!--<div class="group">-->
+            <!--<input type="date" name="date-arrival" id="date-arrival" ng-model="info.dateArrival" class="form-control">-->
+            <!--<label for="date-arrival">Arrival Date</label>-->
+        <!--</div>-->
+
+        <!--<div class="group">-->
+            <!--<button class="btn btn-warning" type="submit">View Flights</button>-->
+        <!--</div>-->
+    <!--</form>-->
+    <!--</div>-->
+<!--</section>-->
