commit css changes to use urls

--- a/lib/client/components/picker/picker.html
+++ b/lib/client/components/picker/picker.html
@@ -1,4 +1,4 @@
-<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01', 'dateArrival': '2015-01-02'}]">Picker - router-link</a>
+<!--<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01', 'dateArrival': '2015-01-02'}]">Picker - router-link</a>-->
 
 <form #aform="form" (submit)="onFind(aform.value)" novalidate onsubmit="return false;">
   <div class="group">
