--- a/lib/client/components/topnav/topnav.html
+++ b/lib/client/components/topnav/topnav.html
@@ -1,7 +1,7 @@
 <section>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" target="landing">Just-In-Time Airlines</a>
+            <a class="navbar-brand" href="/web_apps_dart/web/index.html">Just-In-Time Airlines</a>
         </div>
         <div class="pull-right">
             <a *ng-for="#aButton of buttons; #i = index"
@@ -13,5 +13,3 @@
         </div>
     </nav>
 </section>
-
-<router-outlet></router-outlet>
