--- a/lib/client/components/order/recap.html
+++ b/lib/client/components/order/recap.html
@@ -1,6 +1,6 @@
 <h2>Recap</h2>
-<div class="well" style="text-align: center;">
-    <h4>Flight # {{ timeDTO.flight }}</h4>
-    <div>{{ timeDTO.departure + ' to ' + timeDTO.arrival }}</div>
-    <div>{{ format( params.dateDepart ) + ' to ' + format( params.dateArrival ) }}</div>
+<div *ng-if="shared.timeDTO != null" class="well" style="text-align: center;">
+    <h4>Flight # {{ shared.timeDTO.flight }}</h4>
+    <div>{{ shared.timeDTO.departure + ' to ' + shared.timeDTO.arrival }}</div>
+    <div>{{ flightDTO.dateDepart + ' at ' + shared.timeDTO.takeoff.toString() }}</div>
 </div>
