--- a/lib/client/components/picker/picker.html
+++ b/lib/client/components/picker/picker.html
@@ -1,4 +1,4 @@
-<!--<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01', 'dateArrival': '2015-01-02'}]">Picker - router-link</a>-->
+<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01', 'dateArrival': '2015-01-02'}]">Picker - router-link</a>
 
 <form #aform="form" (submit)="onFind(aform.value)" novalidate onsubmit="return false;" class="clearfix">
   <div class="group">
@@ -22,32 +22,3 @@
 
   <button type="submit">Submit</button>
 </form>
-<!--<section class="clearfix row">-->
-    <!--<div class="form-group">-->
-    <!--<form name="flightForm" ng-submit="onSubmit(flightForm)" novalidate id="flightForm">-->
-
-
-        <!--<div class="group">-->
-            <!--<select ng-if="cities != null" id="city-arrival" ng-model="info.cityArrival" class="form-control">-->
-                <!--<option *ng-for="#vo of cities" value="#vo.airportcode">{{ vo.city }}</option>-->
-            <!--</select>-->
-            <!--<label for="city-arrival">Arrival</label>-->
-        <!--</div>-->
-
-        <!--<div class="group">-->
-            <!--<input type="date" name="date-depart" id="date-depart" ng-model="info.dateDepart" class="form-control">-->
-            <!--<label for="date-depart">Depart Date</label>-->
-        <!--</div>-->
-
-
-        <!--<div class="group">-->
-            <!--<input type="date" name="date-arrival" id="date-arrival" ng-model="info.dateArrival" class="form-control">-->
-            <!--<label for="date-arrival">Arrival Date</label>-->
-        <!--</div>-->
-
-        <!--<div class="group">-->
-            <!--<button class="btn btn-warning" type="submit">View Flights</button>-->
-        <!--</div>-->
-    <!--</form>-->
-    <!--</div>-->
-<!--</section>-->
