--- a/lib/client/components/landing/landing.html
+++ b/lib/client/components/landing/landing.html
@@ -5,5 +5,6 @@
     <h4>{{ t['date'] }}</h4>
     <p>{{ t['description'] }}</p>
     <h5>{{ t['price'] }}</h5>
+    <a [href]="t['url']" class="btn btn-info">Buy</a>
   </div>
 </div>
