--- a/lib/client/components/picker/picker.html
+++ b/lib/client/components/picker/picker.html
@@ -20,5 +20,8 @@
   <label for="date-depart">Depart Date</label>
   </div>
 
-  <button type="submit">Submit</button>
+  <div class="group">
+    <button class="btn btn-warning" type="submit">View Flights</button>
+  </div>
+
 </form>
