--- a/lib/client/components/flight_display/flight_display.html
+++ b/lib/client/components/flight_display/flight_display.html
@@ -21,7 +21,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ng-for="#time of flight_times; #iso = index">
+      <tr *ng-for="#time of flight_times; #index = index">
         <td>{{ time.flight }}</td>
         <td>{{ time.takeoff }}</td>
         <td>{{ time.takeoff + time.route.duration }}</td>
@@ -31,19 +31,19 @@
           <label>
             ${{ time.route.price1 }}
           </label>
-          <input type="radio" name="service_level" [id]="'selection0' + iso.toString()" (click)="select(time, 3)" />
+          <input type="radio" name="service_level" [id]="'selection0' + index.toString()" (click)="select(time, 3)" />
         </td>
         <td>
           <label>
             ${{ time.route.price2 }}
           </label>
-          <input type="radio" name="service_level" [id]="'selection1' + iso.toString()" (click)="select(time, 3)" />
+          <input type="radio" name="service_level" [id]="'selection1' + index.toString()" (click)="select(time, 3)" />
         </td>
         <td>
           <label>
             ${{ time.route.price3 }}
           </label>
-          <input type="radio" name="service_level" [id]="'selection2' + iso.toString()" (click)="select(time, 3)" />
+          <input type="radio" name="service_level" [id]="'selection2' + index.toString()" (click)="select(time, 3)" />
         </td>
         <td class="order">
           <a type="submit" class="btn btn-sm btn-primary" (click)="onsubmit(time)" [ng-class]="{'disabled' : !isSelected(time) }">Order</a>
