--- a/lib/client/components/order/recap.html
+++ b/lib/client/components/order/recap.html
@@ -2,5 +2,5 @@
 <div *ng-if="shared.timeDTO != null" class="well" style="text-align: center;">
   <h4>Flight # {{ shared.timeDTO.flight }}</h4>
   <div>{{ shared.timeDTO.departure + ' to ' + shared.timeDTO.arrival }}</div>
-  <div>{{ flightDTO.dateDepart + ' at ' + shared.timeDTO.takeoff.toString() }}</div>
+  <div>{{ fFlight.dateDepart + ' at ' + shared.timeDTO.takeoff.toString() }}</div>
 </div>
