End of Chapter 16

--- a/lib/client/components/flight_display/flight_display.html
+++ b/lib/client/components/flight_display/flight_display.html
@@ -1,10 +1,10 @@
-<section *ng-if="flight_times == null" class="clearfix" *ng-if="routes != null">
+<section *ng-if="flight_times == null" class="clearfix">
   <div class="clearfix well">
     <h1>Please select your flight data above</h1>
   </div>
 </section>
 
-<section *ng-if="flight_times != null" class="clearfix" *ng-if="routes != null">
+<section *ng-if="flight_times != null" class="clearfix">
   <form name="flight_display_form" novalidate>
     <table class="table table-bordered table-hover">
       <thead>
