--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -13,7 +13,7 @@ html, body {
 }
 
 .deal-box {
-    h3 { margin-top: 0; }
-    img { display: block; width: 100px; height: 66px; float: right; }
-    .btn { margin-top: -45px; float: right; }
+    h3 { margin-top: 0; };
+    img { display: block; width: 100px; height: 66px; float: right; };
+    .btn { margin-top: -45px; float: right; };
 }
