--- a/lib/client/components/picker/picker.html
+++ b/lib/client/components/picker/picker.html
@@ -1,4 +1,4 @@
-<a [router-link]="['/picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01'}]">Quick Link</a>
+<a [router-link]="['/Picker', {'cityDepart': 'SAN', 'cityArrival': 'SFO', 'dateDepart': '2015-01-01'}]">Quick Link</a>
 
 <form (submit)="onFind()" novalidate class="clearfix">
   <div class="group">
