--- a/lib/client/components/order/order.html
+++ b/lib/client/components/order/order.html
@@ -65,7 +65,7 @@
 
     <div class="form-group">
       <label for="billing_zip">Zip</label>
-      <input type="number" id="billing_zip" [(ng-model)]="dto.bZip" class="form-control" [required]="true"/>
+      <input type="text" id="billing_zip" [(ng-model)]="dto.bZip" class="form-control" [required]="true"/>
     </div>
 
     <div class="form-group">
@@ -79,7 +79,7 @@
 
     <div class="form-group">
       <label for="card_number">Credit Card Number</label>
-      <input type="number" id="card_number" [(ng-model)]="dto.ccn" class="form-control" [required]="true"/>
+      <input type="text" id="card_number" [(ng-model)]="dto.ccn" class="form-control" [required]="true"/>
     </div>
 
     <div class="form-group">
@@ -89,7 +89,7 @@
 
     <div class="form-group">
       <label for="card_ccv">CCV</label>
-      <input type="number" id="card_ccv" [(ng-model)]="dto.ccv" class="form-control" [required]="true"/>
+      <input type="text" id="card_ccv" [(ng-model)]="dto.ccv" class="form-control" [required]="true"/>
     </div>
 
     <div class="form-group">
